--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+
+#compiled stuff
+*.a
+siegbert
+unittests
+build/
+
+#logs
+*.debug
