--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,12 @@ _deps
 
 #compiled stuff
 *.a
-siegbert
-./unittests
-build/
+/siegbert
+/unittests
+/build/
 
 #logs
-*.debug
+/*.debug
 
 #ide files
 .vscode/
