--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,42 +12,12 @@ find_package(Boost REQUIRED COMPONENTS regex)
 
 ################################################################################
 
-set(SIEGBERT_EVALUATOR_SRC
-  ${CMAKE_SOURCE_DIR}/src/evaluator/Evaluator.cpp
-  ${CMAKE_SOURCE_DIR}/src/evaluator/MovesSorter.cpp
-  ${CMAKE_SOURCE_DIR}/src/evaluator/Scorer.cpp
-  ${CMAKE_SOURCE_DIR}/src/evaluator/TranspositionTable.cpp
-)
-
-set(SIEGBERT_GAME_SRC
-  ${CMAKE_SOURCE_DIR}/src/game/BoardState.cpp
-  ${CMAKE_SOURCE_DIR}/src/game/BoardState_constants.cpp
-  ${CMAKE_SOURCE_DIR}/src/game/BoardState_zobrist.cpp
-  ${CMAKE_SOURCE_DIR}/src/game/square_for_bboard.cpp
-)
-
-set(SIEGBERT_INTERFACE_SRC
-  ${CMAKE_SOURCE_DIR}/src/interface/EngineIO.cpp
-  ${CMAKE_SOURCE_DIR}/src/interface/UciInterface.cpp
-  ${CMAKE_SOURCE_DIR}/src/interface/XBoardInterface.cpp
-)
-
-set(SIEGBERT_MAIN_SRC
-    ${CMAKE_SOURCE_DIR}/src/main.cpp
-)
-
-set(SIEGBERT_PGN_SRC
-    ${CMAKE_SOURCE_DIR}/src/pgn/Pgn.cpp
-)
-
-################################################################################
-set(SIEGBERT_UNITTESTS_SRC
-    ${CMAKE_SOURCE_DIR}/src/unittests/main.cpp
-    ${CMAKE_SOURCE_DIR}/src/unittests/test_BoardState.cpp
-    ${CMAKE_SOURCE_DIR}/src/unittests/test_Evaluator.cpp
-    ${CMAKE_SOURCE_DIR}/src/unittests/test_perft.cpp
-    ${CMAKE_SOURCE_DIR}/src/unittests/test_Pgn.cpp   
-)
+file(GLOB_RECURSE SIEGBERT_EVALUATOR_SRC ${CMAKE_SOURCE_DIR}/src/evaluator/*.cpp)
+file(GLOB_RECURSE SIEGBERT_GAME_SRC ${CMAKE_SOURCE_DIR}/src/game/*.cpp)
+file(GLOB_RECURSE SIEGBERT_INTERFACE_SRC ${CMAKE_SOURCE_DIR}/src/interface/*.cpp)
+file(GLOB_RECURSE SIEGBERT_PGN_SRC ${CMAKE_SOURCE_DIR}/src/pgn/*.cpp)
+file(GLOB_RECURSE SIEGBERT_UNITTESTS_SRC ${CMAKE_SOURCE_DIR}/src/unittests/*.cpp)
+set(SIEGBERT_MAIN_SRC ${CMAKE_SOURCE_DIR}/src/main.cpp)
 
 ################################################################################
 add_executable(siegbert 
@@ -72,6 +42,7 @@ add_executable(unittests
   ${SIEGBERT_GAME_SRC}
   ${SIEGBERT_INTERFACE_SRC}
 )
+
 target_compile_options(unittests
   PRIVATE
     -g
@@ -82,6 +53,7 @@ target_include_directories(unittests PRIVATE
     ${CMAKE_SOURCE_DIR}/deps/catch2/
     ${CMAKE_SOURCE_DIR}/src/
 )
+
 target_link_libraries(unittests ${Boost_LIBRARIES})
 
 enable_testing()
