compile threading module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ project(Siegbert)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
+## pthread ##
+find_package(Threads)
+
 ## Boost ##
 set(Boost_USE_STATIC_LIBS OFF) 
 set(Boost_USE_MULTITHREADED ON)  
@@ -16,15 +19,24 @@ file(GLOB_RECURSE SIEGBERT_EVALUATOR_SRC ${CMAKE_SOURCE_DIR}/src/evaluator/*.cpp
 file(GLOB_RECURSE SIEGBERT_GAME_SRC ${CMAKE_SOURCE_DIR}/src/game/*.cpp)
 file(GLOB_RECURSE SIEGBERT_INTERFACE_SRC ${CMAKE_SOURCE_DIR}/src/interface/*.cpp)
 file(GLOB_RECURSE SIEGBERT_PGN_SRC ${CMAKE_SOURCE_DIR}/src/pgn/*.cpp)
-file(GLOB_RECURSE SIEGBERT_UNITTESTS_SRC ${CMAKE_SOURCE_DIR}/src/unittests/*.cpp)
-set(SIEGBERT_MAIN_SRC ${CMAKE_SOURCE_DIR}/src/main.cpp)
+file(GLOB_RECURSE SIEGBERT_THREADING_SRC ${CMAKE_SOURCE_DIR}/src/threading/*.cpp)
 
-################################################################################
-add_executable(siegbert 
+set(SIEGBERT_SRC
   ${SIEGBERT_EVALUATOR_SRC}
   ${SIEGBERT_GAME_SRC}
   ${SIEGBERT_INTERFACE_SRC}
-  ${SIEGBERT_MAIN_SRC}
+  ${SIEGBERT_PGN_SRC}
+  ${SIEGBERT_THREADING_SRC}
+)
+
+file(GLOB_RECURSE SIEGBERT_UNITTESTS_SRC ${CMAKE_SOURCE_DIR}/src/unittests/*.cpp)
+
+set(SIEGBERT_MAIN ${CMAKE_SOURCE_DIR}/src/main.cpp)
+
+################################################################################
+add_executable(siegbert 
+  ${SIEGBERT_SRC}
+  ${SIEGBERT_MAIN}
 )
 
 target_include_directories(siegbert PRIVATE 
@@ -32,15 +44,13 @@ target_include_directories(siegbert PRIVATE
     ${CMAKE_SOURCE_DIR}/src/
 )
 
+target_link_libraries(siegbert ${CMAKE_THREAD_LIBS_INIT} )
 target_link_libraries(siegbert ${Boost_LIBRARIES})
 
 ################################################################################
 add_executable(unittests 
+  ${SIEGBERT_SRC}
   ${SIEGBERT_UNITTESTS_SRC}
-  ${SIEGBERT_EVALUATOR_SRC}
-  ${SIEGBERT_PGN_SRC}
-  ${SIEGBERT_GAME_SRC}
-  ${SIEGBERT_INTERFACE_SRC}
 )
 
 target_compile_options(unittests
@@ -54,6 +64,7 @@ target_include_directories(unittests PRIVATE
     ${CMAKE_SOURCE_DIR}/src/
 )
 
+target_link_libraries(unittests ${CMAKE_THREAD_LIBS_INIT} )
 target_link_libraries(unittests ${Boost_LIBRARIES})
 
 enable_testing()
