--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ find_package(Boost REQUIRED COMPONENTS regex)
 file(GLOB_RECURSE SIEGBERT_EVALUATOR_SRC ${CMAKE_SOURCE_DIR}/src/evaluator/*.cpp)
 file(GLOB_RECURSE SIEGBERT_GAME_SRC ${CMAKE_SOURCE_DIR}/src/game/*.cpp)
 file(GLOB_RECURSE SIEGBERT_INTERFACE_SRC ${CMAKE_SOURCE_DIR}/src/interface/*.cpp)
+file(GLOB_RECURSE SIEGBERT_OPENINGBOOK_SRC ${CMAKE_SOURCE_DIR}/src/threading/*.cpp)
 file(GLOB_RECURSE SIEGBERT_PGN_SRC ${CMAKE_SOURCE_DIR}/src/pgn/*.cpp)
 file(GLOB_RECURSE SIEGBERT_THREADING_SRC ${CMAKE_SOURCE_DIR}/src/threading/*.cpp)
 
@@ -25,6 +26,7 @@ set(SIEGBERT_SRC
   ${SIEGBERT_EVALUATOR_SRC}
   ${SIEGBERT_GAME_SRC}
   ${SIEGBERT_INTERFACE_SRC}
+  ${SIEGBERT_OPENINGBOOK_SRC}
   ${SIEGBERT_PGN_SRC}
   ${SIEGBERT_THREADING_SRC}
 )
