--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ project(Siegbert)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_ENABLE_EXPORTS TRUE)
+SET (CMAKE_CXX_FLAGS_DEBUG_INIT "-ggdb")
+SET (CMAKE_CXX_FLAGS_RELEASE_INIT "-O3 -DNDEBUG")
 
 ## pthread ##
 find_package(Threads REQUIRED)
